--- a/AMCO/club.html
+++ b/AMCO/club.html
@@ -61,8 +61,8 @@
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
                 <ul class="dropdown-menu bg-dark pt-0" id="dropdown_archives">
-                  <li><a class="dropdown-item bg-dark text-white text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
-                  <li><a class="dropdown-item bg-dark text-white text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
+                  <li><a class="dropdown-item text-white text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
+                  <li><a class="dropdown-item text-white text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
             </li>
           </ul>
@@ -75,8 +75,8 @@
         <ul class="list-unstyled mt-5">
           <li class="nav-item">
             <a class="nav-link" href="/index.html">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"class="bi bi-house-door" viewbox="0 0 16 16">
-                <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .55h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.514V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewbox="0 0 16 16">
+                <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
               </svg> Accueil
             </a>
           </li>
@@ -144,8 +144,9 @@
                   <div class="card">
                     <h2 class="card-header">Création du club</h2>
                     <div class="card-body mt-2 pt-2">
-                      <p class="card-text">Le club a été créé en 2001 sous l'appellation MKC, affilié à la Fédération UFOLEP depuis sa création.</p>
-                      <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du 24 Octobre 2009 l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
+                      <p class="card-text">Le club a été créé en <u><strong>2001</strong></u> sous l'appellation Moto Kart Club (M.K.C), affilié à la Fédération UFOLEP depuis sa création.</p>
+                      <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du <u><strong>24 Octobre 2009</strong></u> l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
+                      <p class="card-text">Suite à l'Assemblée Générale extraordinaire du <u><strong>3 Novembre 2017</strong></u>  les membres du bureau proposent de changer le nom du club. celui-ci devient <u>l'Amicale Moto Cyclo Occitanie</u></p>
                     </div>
                   </div>
                 </section>
