--- a/AMCO/photos.html
+++ b/AMCO/photos.html
@@ -11,7 +11,7 @@
   <title>Photos de l'Amicale Motos Cyclos Occitanie</title>
   <meta name="description" content="Retrouvez tous les évènements organisés par les membres de l'équipe de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
-<body class="d-flex flex-column">
+<body class="d-flex flex-column bg-dark">
   <div class="content">
     <header>
       <div class="second_banniere">
@@ -61,8 +61,8 @@
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
                 <ul class="dropdown-menu bg-dark pt-0" id="dropdown_archives">
-                  <li><a class="dropdown-item bg-dark text-white text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
-                  <li><a class="dropdown-item bg-dark text-white text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
+                  <li><a class="dropdown-item text-white text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
+                  <li><a class="dropdown-item text-white text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
             </li>
           </ul>
@@ -133,17 +133,86 @@
     <main>
       <div class="pictures mt-4">
         <h1>Photos</h1>
-        <div class="wrapper mx-1">
-          <article>
-            <div class="row"> 
-              <section>
-                <p class="text-center font-weight-bold mx-3"> 
-                  <img height="60" src="/Annexe/Images/Icone/travaux-routiers.png" alt=""> <br> PAGE EN CONSTRUCTION <br>
-                  <img height="60" src="/Annexe/Images/Icone/travaux-routiers.png" alt="">
-                </p>
-              </section>
+        <div class="row" id="first_slideshow">
+          <h2 class="my-2">Saint Suzanne 2011</h2>
+          <div id="my_first_carousel" class="carousel slide" data-ride="carousel">
+            <!--<ol class="carousel-indicators">
+              <li data-target="#my_first_carousel" data-slide-to="765" class="active"></li>
+              <li data-target="#my_first_carousel" data-slide-to="769"></li>
+              <li data-target="#my_first_carousel" data-slide-to="770"></li>
+            </ol>--> 
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121765.JPG" alt="765">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121769.JPG" alt="769">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121770.JPG" alt="770">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121772.JPG" alt="770">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121779.JPG" alt="770" width="330" height="200">  
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121780.JPG" alt="770">
+              </div>
+              
             </div>
-          </article>
+            <!-- Controls -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#my_first_carousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Précédente</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#my_first_carousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Suivante</span>
+            </button>
+          </div>
+        </div>
+        <div class="row mt-3" id="second_slideshow">
+          <h2 class="my-2">Saint Suzanne 2010</h2>
+          <div id="my_second_carousel" class="carousel slide" data-ride="carousel">
+            <!--<ol class="carousel-indicators">
+              <li data-target="#my_first_carousel" data-slide-to="765" class="active"></li>
+              <li data-target="#my_first_carousel" data-slide-to="769"></li>
+              <li data-target="#my_first_carousel" data-slide-to="770"></li>
+            </ol>--> 
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237179.JPG" alt="765">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237197.JPG" alt="769">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237212.JPG" alt="770">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237217.JPG" alt="770">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237242.JPG" alt="770" >  
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237273.JPG" alt="770">
+              </div>
+              
+            </div>
+            <!-- Controls -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#my_second_carousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Précédente</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#my_second_carousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Suivante</span>
+            </button>
+
+          </div>
         </div>
       </div>
     </main>
