--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="0oimqZ7089TB2KD2jknDuvTkNG3NEkQYr-h1fG0uHvE" />
-
   <meta name="description" content="Bienvenue sur la page d'accueil du site de Motocross Ariégeois, l'A.M.C.O (l'Amicale Motos Cyclos Occitanie). Vous y retrouverez les différentes informations relative au club. l'A.M.C.O est une association de Motocross et Vélo basée dans l'Ariège."/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="/Style/style.css">
   <title>Amicale Motos Cyclos Occitanie</title>
 </head>
@@ -65,9 +67,9 @@
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewbox="0 0 16 16">
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
-                <ul class="dropdown-menu bg-dark pt-0" id="dropdown_archives">
-                  <li><a class="dropdown-item bg-dark text-white text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
-                  <li><a class="dropdown-item bg-dark text-white text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
+                <ul class="dropdown-menu bg-dark" id="dropdown_archives">
+                  <li><a class="dropdown-item  text-white text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
+                  <li><a class="dropdown-item text-white text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
             </li>
           </ul>
@@ -113,7 +115,7 @@
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewbox="0 0 16 16">
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
-                <ul class="dropdown-menu pt-0" id="dropdown_menu_archives">
+                <ul class="dropdown-menu" id="dropdown_menu_archives">
                   <li>
                     <a class="dropdown-item" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a>
                   </li>
@@ -150,9 +152,23 @@
               <div class="col">
                 <section class="new_year">
                   <div class="card">
-                    <h2 class="card-header">Site officiel de l'A.M.C.O <br>F.F.M & Moto Cyclo Occitanie U.F.O.L.E.P</h2>
+                    <h2 class="card-header">Site officiel de l'Amicale Moto Cyclo Occitanie  <br> F.F.M </h2>
                     <div class="card-body">
                       <p class="card-text text-center">Les membres de l'équipe vous souhaitent une excellente année 2022 </p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+            <!--New saison-->
+            <div class="row">  
+              <div class="col">
+                <section class="new_saison">
+                  <div class="card">
+                    <h2 class="card-header">Une nouvelle saison qui commence</h2>
+                    <div class="card-body">N'ayant pas de nouvelle concernant notre affiliation à l'UFOLEP, nous ne délivreront que des licences FFM ( Moto, Quad...).
+                    </div>
+                    <div class="card-footer mt-0"> <strong>Les nouveaux Tarifs FFM vont nous parvenir très prochainement.</strong>
                     </div>
                   </div>
                 </section>
@@ -189,10 +205,9 @@
                   <div class="card">
                     <h2 class="card-header">Information générale</h2>
                     <div class="card-body">
-                      <p class="card-text text-center">Suite à la double affilation du club (UFOLEP + FFM) et à l'augmentation de 
-                        l'affiliation FFM. </p>
-                      <p class="adhésion text-center"><strong>L'Adhésion au Club est passée à 20 €
-                      </strong></p>
+                      <p class="card-text text-center">Le montant de l'affiliation au club pour l'année 2022 / 2023 n'augmente pas et reste à 
+                        <span class="adhésion">20€</span>
+                      </p>
                     </div>
                   </div>
                 </section>
